--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página de Blog</h1>    
+    <h1>Página de Blog</h1>  
+    <p>Bem vindo a página de blog</p>  
 </body>
 </html>
