--- a/vendas.html
+++ b/vendas.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Página de Vendas</h1>    
     <a href="index.html">Voltar para a página de vendas</a>
-    <h2>Relatório de vendas</h2>
+    <h2>Relatório venda</h2>
     <p>Venda 1</p>
     <p>Venda 2</p>
 </body>
